--- a/package.json
+++ b/package.json
@@ -1,54 +1,42 @@
 {
   "name": "finanza-zuid",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node node_modules/.bin/next dev",
-    "build": "node node_modules/.bin/next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "node node_modules/.bin/next start -p ${PORT:-3000}",
-    "lint": "node node_modules/.bin/next lint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "@types/js-cookie": "^3.0.6",
-    "clsx": "^2.0.0",
-    "date-fns": "^3.0.6",
-    "framer-motion": "^12.5.0",
-    "isomorphic-dompurify": "^2.22.0",
-    "js-cookie": "^3.0.5",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.4"
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@prisma/client": "^5.10.2",
+    "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "20.11.24",
+    "@types/react": "18.2.61",
+    "@types/react-dom": "18.2.19",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.0",
+    "framer-motion": "^11.0.8",
+    "next": "14.1.0",
+    "postcss": "8.4.35",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "prisma": "^5.10.2"
   }
 }
