--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,16 @@
-# Next.js
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# Auth0 Configuration
+AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='your-auth0-domain'
+AUTH0_CLIENT_ID='your-auth0-client-id'
+AUTH0_CLIENT_SECRET='your-auth0-client-secret'
 
-# Authentication (Auth0)
-AUTH0_SECRET=your-auth0-secret
-AUTH0_BASE_URL=http://localhost:3000
-AUTH0_ISSUER_BASE_URL=https://your-tenant.auth0.com
-AUTH0_CLIENT_ID=your-auth0-client-id
-AUTH0_CLIENT_SECRET=your-auth0-client-secret
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL='your-supabase-url'
+NEXT_PUBLIC_SUPABASE_ANON_KEY='your-supabase-anon-key'
 
-# Sanity CMS
-NEXT_PUBLIC_SANITY_PROJECT_ID=your-sanity-project-id
-NEXT_PUBLIC_SANITY_DATASET=production
-SANITY_API_TOKEN=your-sanity-api-token
+# API Configuration
+NEXT_PUBLIC_API_URL='http://localhost:3000/api'
 
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
-
-# Stripe
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
-STRIPE_SECRET_KEY=your-stripe-secret-key
-STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
-
-# Email (SendGrid)
-SENDGRID_API_KEY=your-sendgrid-api-key
-EMAIL_FROM=noreply@finanzazuid.nl
-
-# Google Analytics
-NEXT_PUBLIC_GA_MEASUREMENT_ID=your-ga-measurement-id 
+# Environment
+NODE_ENV='development'
