--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.10.2",
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.11.24",
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
@@ -24,10 +25,14 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "^11.0.8",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
