--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.61",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "clsx": "^2.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "^11.0.8",
@@ -29,10 +30,11 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "postcss": "8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
@@ -43,5 +45,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.10.2"
+  },
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
