--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,21 @@
-# Auth0 Configuration
-AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
-AUTH0_BASE_URL='http://localhost:3000'
-AUTH0_ISSUER_BASE_URL='your-auth0-domain'
-AUTH0_CLIENT_ID='your-auth0-client-id'
-AUTH0_CLIENT_SECRET='your-auth0-client-secret'
-
 # Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL='your-supabase-url'
-NEXT_PUBLIC_SUPABASE_ANON_KEY='your-supabase-anon-key'
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-project-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# Auth0 Configuration
+AUTH0_SECRET=use-[openssl-rand-hex-32]-to-generate
+AUTH0_BASE_URL=http://localhost:3000
+AUTH0_ISSUER_BASE_URL=your-auth0-domain
+AUTH0_CLIENT_ID=your-auth0-client-id
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
+
+# NextAuth Configuration
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret
 
 # API Configuration
-NEXT_PUBLIC_API_URL='http://localhost:3000/api'
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
 # Environment
-NODE_ENV='development'
+NODE_ENV=development
